--- a/templates/default/header.html.twig
+++ b/templates/default/header.html.twig
@@ -61,7 +61,7 @@
                 <li class="scroll"><a href="#team">EQUIPE</a></li>
                 <li class="scroll"><a href="#whyus">VALEURS</a></li>
                 <li class="scroll"><a href="#portfolio">PORTOFOLIO</a></li>
-                <li class="scroll"><a href="#client">ACTUALITES</a></li>
+                <li class="scroll"><a href="#news">ACTUALITES</a></li>
                 <li class="scroll"><a href="#contact">CONTACT </a></li>
 
             </ul>
