--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -16,7 +16,7 @@
 
     {% include 'pages/portfolio.html.twig' %}
 
-    {% include 'pages/actualites.html.twig' %}
+    {% include 'pages/news.html.twig' %}
 
     {% include 'pages/contact-us.html.twig' %}
 
