--- a/templates/pages/news.html.twig
+++ b/templates/pages/news.html.twig
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="heading text-center">
-                <h1>Our latest news</h1>
+                <h1>ACTUALITES</h1>
                 <hr>
             </div>
         </div>
@@ -11,14 +11,14 @@
             <div class="col-md-6 col-sm-6">
                 <div class="news-block">
                     <div class="blog-img">
-                        <img src="images/blog-1.jpg" class="img-responsive" alt="blog">
+                        <img src="{{ asset('/build/images/blog-1.jpg') }}" class="img-responsive" alt="blog">
                         <div class="tag">
                             Architecture
                         </div>
                     </div>
                     <div class="blog-content">
                         <h4>These Happy Days are yours and mine Happy Days</h4>
-                        <p>By Aura Group, 1 Hour ago</p>
+                        <p>Par AB Mali Services</p>
                         <a href="#" class="btn btn-outline">Read More</a>
                     </div>
                 </div>
@@ -26,14 +26,14 @@
             <div class="col-md-6 col-sm-6">
                 <div class="news-block">
                     <div class="blog-img">
-                        <img src="images/blog-2.jpg" class="img-responsive" alt="blog">
+                        <img src="{{ asset('/build/images/blog-2.jpg') }}" class="img-responsive" alt="blog">
                         <div class="tag">
                             Interior
                         </div>
                     </div>
                     <div class="blog-content">
                         <h4>Then along come two they got nothin' but their jeans</h4>
-                        <p>By Aura Group, 1 Hour ago</p>
+                        <p>Par AB Mali Services</p>
                         <a href="#" class="btn btn-outline">Read More</a>
                     </div>
                 </div>
