--- a/templates/pages/our-services.html.twig
+++ b/templates/pages/our-services.html.twig
@@ -45,7 +45,7 @@
             <div class="col-md-4 col-sm-4">
                 <div class="fullWidthSix_img hidden-xs">
                     <div class="center-image">
-                        <img class="img-responsive" src="{{ asset('build/images/service-man.png') }}" alt="">
+                        <img class="img-responsive" src="{{ asset('build/images/brand/services.jpg') }}" alt="">
                     </div>
 
                 </div>
