--- a/templates/pages/slider.html.twig
+++ b/templates/pages/slider.html.twig
@@ -6,15 +6,17 @@
         <div class="master-slider ms-skin-default" id="masterslider">
             <div class="ms-slide slide-3">
                 <h3 class="ms-layer thin-text-white blacktext" data-type="text" data-effect="top(45)" data-duration="3400" data-ease="easeOutExpo">
-                    AB Mali Services
+                    NOUS CONSTRUISONS VOS REVES
                 </h3>
-                <h4 class="ms-layer bold-text-white bigtext" data-type="text" data-effect="top(45)" data-duration="3400" data-delay="400" data-ease="easeOutExpo">
-                NOUS CONSTRUISONS VOS REVES
-                </h4>
-                <img src="{{ asset('build/vendor/masterslider/style/blank.gif') }}" data-src="{{ asset('build/images/img-2.jpg') }}" alt="lorem ipsum dolor sit">
+                <h2 class="ms-layer bold-text-white bigtext" data-type="text" data-effect="top(45)" data-duration="3400" data-delay="400" data-ease="easeOutExpo">
+                    <div class="welcome-image-layer">
+                        <img src="{{ asset('build/images/slider_layer_1.png') }}" alt="">
+                    </div>
+                </h2>
+                <img src="{{ asset('build/images/brand/slide_2.jpg') }}" style="-webkit-filter: brightness(50%)" data-src="{{ asset('build/images/brand/slide_2.jpg') }}" alt="lorem ipsum dolor sit">
             </div>
             <div class="ms-slide slide-1">
-                <img src="{{ asset('build/vendor/masterslider/style/blank.gif') }}" data-src="{{ asset('build/images/img-1.jpg') }}" alt="lorem ipsum dolor sit">
+                <img src="{{ asset('build/images/brand/slide_1.jpg') }}" style="-webkit-filter: brightness(50%)"  data-src="{{ asset('build/images/brand/slide_1.jpg') }}" alt="lorem ipsum dolor sit">
                 <h3 class="ms-layer bold-text-white bigtext" data-type="text" data-effect="back(1300)" data-duration="1800" data-delay="0"
                     data-hide-effect="left(short,false)" >
                     NOUS CREONS
