envoie de mail contact et demande de devis

--- a/templates/default/footer.html.twig
+++ b/templates/default/footer.html.twig
@@ -5,19 +5,20 @@
             <div class="col-md-3 col-sm-3">
                 <div class="contact-info">
                     <i class="fa fa-map-marker"></i>
-                    <p class="dart-fs-16">05 ABMS Group Constructions,<br>France,Paris, ile de France</p>
+                    <p class="dart-fs-16">ABMS<br>9-11 avenue Michelet 93400 Saint Ouen</p>
                 </div>
             </div>
             <div class="col-md-3 col-sm-3">
                 <div class="contact-info">
                     <i class="fa fa-phone"></i>
-                    <p class="dart-fs-16">+1 123 456 7890<br>+1 321 654 9870</p>
+                    <p class="dart-fs-16">+223 94121239 (Mali)<br>0623350297</p>
                 </div>
             </div>
             <div class="col-md-3 col-sm-3">
                 <div class="contact-info">
                     <i class="fa fa-envelope-o"></i>
-                    <p class="dart-fs-16">Info@abms.com<br>Support@abms.com</p>
+                    <p class="dart-fs-16">contact@abmaliservices.com
+                        <br>www.abmaliservices.com</p>
                 </div>
             </div>
             <div class="col-md-3 col-sm-3">
