--- a/templates/default/header.html.twig
+++ b/templates/default/header.html.twig
@@ -19,8 +19,8 @@
         <div class="clearfix">
             <div class="top-column-left">
                 <ul class="contact-line">
-                    <li><i class="fa fa-envelope"></i>info@adms.com</li>
-                    <li><i class="fa fa-phone"></i>(0021)-123-456-789-90</li>
+                    <li><i class="fa fa-envelope"></i>contact@abmaliservices.com</li>
+                    <li><i class="fa fa-phone"></i>+223 94121239</li>
                 </ul>
             </div>
             <div class="top-column-right">
@@ -46,7 +46,7 @@
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
                 <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand" href="#brand"><img src="{{ asset('build/images/brand/logo.png') }}" class="logo logo-scrolled" alt=""></a>
+            <a class="navbar-brand" href="{{ path('default') }}"><img src="{{ asset('build/images/brand/logo.png') }}" class="logo logo-scrolled" alt=""></a>
         </div>
         <!-- End Header Navigation -->
 
