--- a/templates/default/footer.html.twig
+++ b/templates/default/footer.html.twig
@@ -5,13 +5,13 @@
             <div class="col-md-3 col-sm-3">
                 <div class="contact-info">
                     <i class="fa fa-map-marker"></i>
-                    <p class="dart-fs-16">ABMS<br>9-11 avenue Michelet 93400 Saint Ouen</p>
+                    <p class="dart-fs-16">ABMS, 9-11 avenue<br>Michelet 93400 Saint-Ouen</p>
                 </div>
             </div>
             <div class="col-md-3 col-sm-3">
                 <div class="contact-info">
                     <i class="fa fa-phone"></i>
-                    <p class="dart-fs-16">+223 94121239 (Mali)<br>0623350297</p>
+                    <p class="dart-fs-16">+223 94121239 (Mali)<br>06 23 35 02 97</p>
                 </div>
             </div>
             <div class="col-md-3 col-sm-3">
