--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -3,16 +3,15 @@
 {% block title %}Accueil {% endblock %}
 
 {% block body %}
+    {% include 'pages/slider.html.twig' %}
 
     {% include 'pages/about-company.html.twig' %}
 
     {% include 'pages/our-services.html.twig' %}
 
-    {% include 'pages/our-project.html.twig' %}
-
     {% include 'pages/our-team.html.twig' %}
-    {% include 'pages/why-us.html.twig' %}
 
+    {% include 'pages/why-us.html.twig' %}
 
     {% include 'pages/portfolio.html.twig' %}
 
