--- a/templates/pages/about-company.html.twig
+++ b/templates/pages/about-company.html.twig
@@ -8,9 +8,10 @@
                     <div class="heading">
                         <h1>Bienvenue  chez<span class="yellow"> ABMS</span></h1>
                     </div>
-                    <p class="dart-fs-18"><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</em></p>
-                    <p>I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. </p>
-                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal.</p>
+                    <p class="dart-fs-18"><em>AB MALI SEVRICES est une entreprise multiservices fondée par Moussa Dembélé et Yahiya Touré.</em></p>
+                    <p>Après plus de 10 ans d’expériences en France, Ils ont décidé de s’implanter au Mali afin de mettre leurs compétences aux services de la diaspora.</p>
+                    <p>Aujourd’hui ABMS développe ses activités immobilières avec la construction de vos biens immobiliers ainsi que les travaux d’embellissement.
+                        L’import et le transport de produits dédiés au BTP a également été mis en service début 2019.</p>
                 </div>
                 <div class="highlight">
                     <div class="icon_box_hexa">
@@ -89,19 +90,19 @@
             <div class="col-md-6 col-sm-6 left-cornar">
                 <div class="heading text-center">
                     <h2 class="white">Besoin de consulter un expert ?</h2>
-                    <p class="breng">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
                 <div class="act-but">
-                    <a href="#" class="btn btn-black">Contactez nous</a>
+                    <ul><li class="scroll"><a href="#contact" class="btn btn-black">Contactez nous</a></li></ul>
                 </div>
             </div>
             <div class="col-md-6 col-sm-6 right-cornar">
                 <div class="heading text-center">
                     <h2 class="white">Besoin de savoir notre expertise ?</h2>
-                    <p class="breng">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
                 <div class="act-but">
-                    <a href="#" class="btn btn-yellow">Voir Réalisations</a>
+                    <ul>
+                        <li class="scroll"><a href="#portfolio" class="btn btn-yellow">Voir Réalisations</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
