--- a/templates/pages/news.html.twig
+++ b/templates/pages/news.html.twig
@@ -17,9 +17,9 @@
                         </div>
                     </div>
                     <div class="blog-content">
-                        <h4>These Happy Days are yours and mine Happy Days</h4>
+                        <h4>l'architecture ...</h4>
                         <p>Par AB Mali Services</p>
-                        <a href="#" class="btn btn-outline">Read More</a>
+                        <a href="#" class="btn btn-outline">Lire plus</a>
                     </div>
                 </div>
             </div>
@@ -32,9 +32,9 @@
                         </div>
                     </div>
                     <div class="blog-content">
-                        <h4>Then along come two they got nothin' but their jeans</h4>
+                        <h4>Le design intérieur ...</h4>
                         <p>Par AB Mali Services</p>
-                        <a href="#" class="btn btn-outline">Read More</a>
+                        <a href="#" class="btn btn-outline">Lire plus</a>
                     </div>
                 </div>
             </div>
