--- a/templates/pages/our-services.html.twig
+++ b/templates/pages/our-services.html.twig
@@ -3,9 +3,9 @@
     <div class="container">
         <div class="row">
             <div class="heading text-center">
-                <h1>Nos Services</h1>
+                <h1>Nos Métiiers</h1>
                 <hr>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
+                <p>Découvrez nos métiers. <br> Nous proposons des métiers divers qui couvrent tous les domaines de la construction. </p>
             </div>
         </div>
         <div class="row">
@@ -15,7 +15,6 @@
                         <i class="fa fa-building-o"></i>
                         <div class="feature-text">
                             <h4> Construction </h4>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincid  unt ut laoreet dolore.</p>
                         </div>
                     </div>
                 </div><!-- /.feature-wrapper -->
@@ -25,7 +24,6 @@
                         <i class="fa fa-shower"></i>
                         <div class="feature-text">
                             <h4>Services de plomberie</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincid  unt ut laoreet dolore.</p>
                         </div>
                     </div>
                 </div><!-- /.feature-wrapper -->
@@ -35,7 +33,30 @@
                         <i class="fa fa-paint-brush"></i>
                         <div class="feature-text">
                             <h4>Peinture murale</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincid  unt ut laoreet dolore.</p>
+                        </div>
+                    </div>
+                </div><!-- /.feature-wrapper -->
+                <div class="feature-wrapper">
+                    <div class="feature-content left-feature clearfix">
+                        <i class="fa fa-paint-brush"></i>
+                        <div class="feature-text">
+                            <h4>Enduits</h4>
+                        </div>
+                    </div>
+                </div><!-- /.feature-wrapper -->
+                <div class="feature-wrapper">
+                    <div class="feature-content left-feature clearfix">
+                        <i class="fa fa-paint-brush"></i>
+                        <div class="feature-text">
+                            <h4>Electricité</h4>
+                        </div>
+                    </div>
+                </div><!-- /.feature-wrapper -->
+                 <div class="feature-wrapper">
+                    <div class="feature-content left-feature clearfix">
+                        <i class="fa fa-paint-brush"></i>
+                        <div class="feature-text">
+                            <h4>Jardinage</h4>
                         </div>
                     </div>
                 </div><!-- /.feature-wrapper -->
@@ -57,7 +78,6 @@
                         <i class="fa fa-university"></i>
                         <div class="feature-text">
                             <h4>Architecture</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincid  unt ut laoreet dolore.</p>
                         </div>
                     </div>
                 </div><!-- /.feature-wrapper -->
@@ -67,17 +87,38 @@
                         <i class="fa fa-bed"></i>
                         <div class="feature-text">
                             <h4>Design intérieur</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincid  unt ut laoreet dolore.</p>
                         </div>
                     </div>
                 </div><!-- /.feature-wrapper -->
-
                 <div class="feature-wrapper">
                     <div class="feature-content right-feature clearfix">
                         <i class="fa fa-home"></i>
                         <div class="feature-text">
-                            <h4>Décoration</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincid  unt ut laoreet dolore.</p>
+                            <h4>Fondation</h4>
+                        </div>
+                    </div>
+                </div><!-- /.feature-wrapper -->
+                <div class="feature-wrapper">
+                    <div class="feature-content right-feature clearfix">
+                        <i class="fa fa-home"></i>
+                        <div class="feature-text">
+                            <h4>Isolation</h4>
+                        </div>
+                    </div>
+                </div><!-- /.feature-wrapper -->
+                <div class="feature-wrapper">
+                    <div class="feature-content right-feature clearfix">
+                        <i class="fa fa-home"></i>
+                        <div class="feature-text">
+                            <h4>Étanchéité</h4>
+                        </div>
+                    </div>
+                </div><!-- /.feature-wrapper -->
+                <div class="feature-wrapper">
+                    <div class="feature-content right-feature clearfix">
+                        <i class="fa fa-paint-brush"></i>
+                        <div class="feature-text">
+                            <h4>Climatisation</h4>
                         </div>
                     </div>
                 </div><!-- /.feature-wrapper -->
