--- a/templates/pages/why-us.html.twig
+++ b/templates/pages/why-us.html.twig
@@ -12,49 +12,52 @@
                     <div class="heading text-left">
                         <h1 class="white">VALEURS</h1>
                         <hr>
-                        <p class="breng">Lorem ipsum dolor sit amet, consectetuer adipisci</p>
+                        <p class="breng">Nous nous engageons à mettre nos atouts professionnels et personnels à votre service.</p>
                     </div>
                     <div class="panel-group" id="accordion_2">
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a class="collapsed" data-toggle="collapse" data-parent="#accordion_2" href="#collapseRightone" aria-expanded="false">
-                                        We Create Brilliant Buildings
+                                        Transparence
                                     </a>
                                 </h4>
-                            </div>
-                            <div id="collapseRightone" class="panel-collapse collapse" aria-expanded="false">
-                                <div class="panel-body">
-                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincid  unt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor
-                                </div>
                             </div>
                         </div><!-- /.panel-default -->
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <h4 class="panel-title">
-                                    <a data-toggle="collapse" data-parent="#accordion_2" href="#collapseRightTwo" aria-expanded="false">
-                                        Creative Wall Painting Services
+                                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion_2" href="#collapseRightone" aria-expanded="false">
+                                        Expertise
                                     </a>
                                 </h4>
-                            </div>
-                            <div id="collapseRightTwo" class="panel-collapse collapse in" aria-expanded="false">
-                                <div class="panel-body">
-                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincid  unt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor
-                                </div>
                             </div>
                         </div><!-- /.panel-default -->
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a class="collapsed" data-toggle="collapse" data-parent="#accordion_2" href="#collapseRightThree" aria-expanded="false">
-                                        Great Professional Staff Abroad
+                                        Confiance
                                     </a>
                                 </h4>
                             </div>
-                            <div id="collapseRightThree" class="panel-collapse collapse" aria-expanded="false">
-                                <div class="panel-body">
-                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincid  unt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor
-                                </div>
+                        </div><!-- /.panel-default -->
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion_2" href="#collapseRightThree" aria-expanded="false">
+                                        Responsabilité
+                                    </a>
+                                </h4>
+                            </div>
+                        </div><!-- /.panel-default -->
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion_2" href="#collapseRightThree" aria-expanded="false">
+                                        Adaptabilité
+                                    </a>
+                                </h4>
                             </div>
                         </div><!-- /.panel-default -->
                     </div><!--end of /.panel-group-->
