--- a/templates/default/header.html.twig
+++ b/templates/default/header.html.twig
@@ -56,8 +56,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="active scroll"><a href="#home">ACCUEIL</a></li>
                 <li class="scroll"><a href="#about">A PROPOS</a></li>
-                <li class="scroll"><a href="#services">SERVICES</a></li>
-                <li class="scroll"><a href="#project">METIERS</a></li>
+                <li class="scroll"><a href="#services">METIERS</a></li>
                 <li class="scroll"><a href="#team">EQUIPE</a></li>
                 <li class="scroll"><a href="#whyus">VALEURS</a></li>
                 <li class="scroll"><a href="#portfolio">PORTOFOLIO</a></li>
