--- a/templates/pages/our-team.html.twig
+++ b/templates/pages/our-team.html.twig
@@ -8,48 +8,8 @@
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-3 col-sm-3">
-                <div class="team-wapper">
-                    <div class="ImageWrapper">
-                        <img class="img-responsive" src="{{ asset('build/images/team-1.jpg') }}" alt="">
-                        <div class="ImageOverlayH"></div>
-                        <div class="Buttons StyleV">
-								<span class="WhiteRounded"><a href=""><i class="fa fa-facebook"></i></a>
-								</span>
-                            <span class="WhiteRounded"><a href=""><i class="fa fa-twitter"></i></a>
-								</span>
-                            <span class="WhiteRounded"><a href=""><i class="fa fa-instagram"></i></a>
-								</span>
-                        </div>
-                    </div>
-                    <div class="member-name">
-                        <h4>Alexander Brown</h4>
-                        <p>Creative Builder</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3 col-sm-3">
-                <div class="team-wapper">
-                    <div class="ImageWrapper">
-                        <img class="img-responsive" src="{{ asset('build/images/team-2.jpg') }}" alt="">
-                        <div class="ImageOverlayH"></div>
-                        <div class="Buttons StyleV">
-								<span class="WhiteRounded"><a href=""><i class="fa fa-facebook"></i></a>
-								</span>
-                            <span class="WhiteRounded"><a href=""><i class="fa fa-twitter"></i></a>
-								</span>
-                            <span class="WhiteRounded"><a href=""><i class="fa fa-instagram"></i></a>
-								</span>
-                        </div>
-                    </div>
-                    <div class="member-name">
-                        <h4>John Doe</h4>
-                        <p>Painting Director</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3 col-sm-3">
+        <div class="col-md-3 col-sm-3"></div>
+        <div class="col-md-3 col-sm-3">
                 <div class="team-wapper">
                     <div class="ImageWrapper">
                         <img class="img-responsive" src="{{ asset('build/images/team-3.jpg') }}" alt="">
@@ -89,6 +49,6 @@
                     </div>
                 </div>
             </div>
-        </div>
+        <div class="col-md-3 col-sm-3"></div>
     </div>
 </section>
