--- a/templates/pages/portfolio.html.twig
+++ b/templates/pages/portfolio.html.twig
@@ -4,7 +4,8 @@
             <div class="heading text-center">
                 <h1>PORTFOLIO</h1>
                 <hr>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
+                <p>Nous sommes soucieux de vos besoins et de vos attentes.  A l’écoute, nous vous accompagnons avec énergie et créativité dans le respect des délais et des normes.
+                    <br>Ci-dessous quelques unes nos réalisations.</p>
             </div>
         </div>
     </div>
@@ -12,7 +13,6 @@
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 text-center">
                 <div class="button-group filters-button-group clearfix">
-                    <button class="button active filter-button" data-filter="all">Voir tout</button>
                     <button class="button filter-button" data-filter="creative">Architectures</button>
                     <button class="button filter-button" data-filter="building">Constructions</button>
                     <button class="button filter-button" data-filter="painting">Décoration</button>
@@ -22,8 +22,8 @@
         <div class="row no-gutter">
             <div class="col-lg-2 col-col-md-3 col-sm-3 col-xs-12 filter creative">
                 <div class="portfolio_6">
-                    <a href="{{ asset('build/images/gallery-thumb/arch1.jpeg') }}g" class="item-box" rel="prettyPhoto[gallery1]"><!-- full image -->
-                        <img src="{{ asset('build/images/gallery-thumb/arch1.jpeg') }}" class="img-responsive" alt=""><!-- thumb image -->
+                    <a href="{{ asset('build/images/gallery-thumb/arch1.jpeg') }}" class="item-box" rel="prettyPhoto[gallery1]"><!-- full image -->
+                        <img src="{{ asset('build/images/gallery-thumb/arch1.jpeg')}}" class="img-responsive" alt=""><!-- thumb image -->
 
                         <div class="portfolio-bg"><!-- caption here -->
                             <div class="portfolio-item">
@@ -34,10 +34,10 @@
                             <div class="portfolio-item-bg-black">
                                 <div class="item-info">
                                     <div class="headline">
-                                        <h4>MAXART DESIGN</h4>
+                                        <h4>DESIGN ABMS</h4>
                                         <hr>
                                     </div>
-                                    <p>Amazing Design by Multipurpose</p>
+                                    <p>Design impressionnant</p>
                                 </div>
                             </div>
                         </div>
@@ -58,10 +58,10 @@
                             <div class="portfolio-item-bg-black">
                                 <div class="item-info">
                                     <div class="headline">
-                                        <h4>MAXART DESIGN</h4>
+                                        <h4>DESIGN ABMS</h4>
                                         <hr>
                                     </div>
-                                    <p>Amazing Design by Multipurpose</p>
+                                    <p>Design impressionnant</p>
                                 </div>
                             </div>
                         </div>
@@ -82,10 +82,10 @@
                             <div class="portfolio-item-bg-black">
                                 <div class="item-info">
                                     <div class="headline">
-                                        <h4>MAXART DESIGN</h4>
+                                        <h4>DESIGN ABMS</h4>
                                         <hr>
                                     </div>
-                                    <p>Amazing Design by Multipurpose</p>
+                                    <p>Design impressionnant</p>
                                 </div>
                             </div>
                         </div>
@@ -106,10 +106,10 @@
                             <div class="portfolio-item-bg-black">
                                 <div class="item-info">
                                     <div class="headline">
-                                        <h4>MAXART DESIGN</h4>
+                                        <h4>DESIGN ABMS</h4>
                                         <hr>
                                     </div>
-                                    <p>Amazing Design by Multipurpose</p>
+                                    <p>Design impressionnant</p>
                                 </div>
                             </div>
                         </div>
@@ -128,66 +128,18 @@
                                 </div>
                             </div>
                             <div class="portfolio-item-bg-black">
-                                <div class="item-info">
-                                    <div class="headline">
-                                        <h4>MAXART DESIGN</h4>
-                                        <hr>
-                                    </div>
-                                    <p>Amazing Design by Multipurpose</p>
+                                <div class="headline">
+                                    <h4>DESIGN ABMS</h4>
+                                    <hr>
+                                </div>
+                                <p>Design impressionnant</p>
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
             </div>
-            <div class="col-lg-2 col-col-md-3 col-sm-3 col-xs-12 filter creative">
-                <div class="portfolio_6">
-                    <a href="{{ asset('build/images/gallery-thumb/archi6.jpeg') }}" class="item-box" rel="prettyPhoto[gallery1]"><!-- full image -->
-                        <img src="{{ asset('build/images/gallery-thumb/archi6.jpeg') }}" class="img-responsive" alt=""><!-- thumb image -->
 
-                        <div class="portfolio-bg"><!-- caption here -->
-                            <div class="portfolio-item">
-                                <div class="item-info">
-                                    <span class="plus">+</span>
-                                </div>
-                            </div>
-                            <div class="portfolio-item-bg-black">
-                                <div class="item-info">
-                                    <div class="headline">
-                                        <h4>MAXART DESIGN</h4>
-                                        <hr>
-                                    </div>
-                                    <p>Amazing Design by Multipurpose</p>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-lg-2 col-col-md-3 col-sm-3 col-xs-12 filter building">
-                <div class="portfolio_6">
-                    <a href="{{ asset('build/images/gallery-thumb/cons1.jpeg') }}" class="item-box" rel="prettyPhoto[gallery1]"><!-- full image -->
-                        <img src="{{ asset('build/images/gallery-thumb/cons1.jpeg') }}" class="img-responsive" alt=""><!-- thumb image -->
-
-                        <div class="portfolio-bg"><!-- caption here -->
-                            <div class="portfolio-item">
-                                <div class="item-info">
-                                    <span class="plus">+</span>
-                                </div>
-                            </div>
-                            <div class="portfolio-item-bg-black">
-                                <div class="item-info">
-                                    <div class="headline">
-                                        <h4>MAXART DESIGN</h4>
-                                        <hr>
-                                    </div>
-                                    <p>Amazing Design by Multipurpose</p>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
             <div class="col-lg-2 col-col-md-3 col-sm-3 col-xs-12 filter building">
                 <div class="portfolio_6">
                     <a href="{{ asset('build/images/gallery-thumb/cons2.jpeg') }}" class="item-box" rel="prettyPhoto[gallery1]"><!-- full image -->
@@ -202,10 +154,10 @@
                             <div class="portfolio-item-bg-black">
                                 <div class="item-info">
                                     <div class="headline">
-                                        <h4>MAXART DESIGN</h4>
+                                        <h4>DESIGN ABMS</h4>
                                         <hr>
                                     </div>
-                                    <p>Amazing Design by Multipurpose</p>
+                                    <p>Design impressionnant</p>
                                 </div>
                             </div>
                         </div>
@@ -214,7 +166,7 @@
             </div>
             <div class="col-lg-2 col-col-md-3 col-sm-3 col-xs-12 filter building">
                 <div class="portfolio_6">
-                    <a href="{{ asset('build/"images/gallery-thumb/cons3.jpeg') }}" class="item-box" rel="prettyPhoto[gallery1]"><!-- full image -->
+                    <a href="{{ asset('build/images/gallery-thumb/cons3.jpeg') }}" class="item-box" rel="prettyPhoto[gallery1]"><!-- full image -->
                         <img src="{{ asset('build/images/gallery-thumb/cons3.jpeg') }}" class="img-responsive" alt=""><!-- thumb image -->
 
                         <div class="portfolio-bg"><!-- caption here -->
@@ -226,64 +178,17 @@
                             <div class="portfolio-item-bg-black">
                                 <div class="item-info">
                                     <div class="headline">
-                                        <h4>MAXART DESIGN</h4>
+                                        <h4>DESIGN ABMS</h4>
                                         <hr>
                                     </div>
-                                    <p>Amazing Design by Multipurpose</p>
+                                    <p>Design impressionnant</p>
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
             </div>
-            <div class="col-lg-2 col-col-md-3 col-sm-3 col-xs-12 filter building">
-                <div class="portfolio_6">
-                    <a href="{{ asset('build/images/gallery-thumb/cons4.jpeg') }}" class="item-box" rel="prettyPhoto[gallery1]"><!-- full image -->
-                        <img src="{{ asset('build/images/gallery-thumb/cons4.jpeg') }}" class="img-responsive" alt=""><!-- thumb image -->
 
-                        <div class="portfolio-bg"><!-- caption here -->
-                            <div class="portfolio-item">
-                                <div class="item-info">
-                                    <span class="plus">+</span>
-                                </div>
-                            </div>
-                            <div class="portfolio-item-bg-black">
-                                <div class="item-info">
-                                    <div class="headline">
-                                        <h4>MAXART DESIGN</h4>
-                                        <hr>
-                                    </div>
-                                    <p>Amazing Design by Multipurpose</p>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-lg-2 col-col-md-3 col-sm-3 col-xs-12 filter building">
-                <div class="portfolio_6">
-                    <a href="{{ asset('build/images/gallery-thumb/cons5.jpeg') }}" class="item-box" rel="prettyPhoto[gallery1]"><!-- full image -->
-                        <img src="{{ asset('build/images/gallery-thumb/cons5.jpeg') }}" class="img-responsive" alt=""><!-- thumb image -->
-
-                        <div class="portfolio-bg"><!-- caption here -->
-                            <div class="portfolio-item">
-                                <div class="item-info">
-                                    <span class="plus">+</span>
-                                </div>
-                            </div>
-                            <div class="portfolio-item-bg-black">
-                                <div class="item-info">
-                                    <div class="headline">
-                                        <h4>MAXART DESIGN</h4>
-                                        <hr>
-                                    </div>
-                                    <p>Amazing Design by Multipurpose</p>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
             <div class="col-lg-2 col-col-md-3 col-sm-3 col-xs-12 filter painting">
                 <div class="portfolio_6">
                     <a href="{{ asset('build/images/gallery-thumb/deco1.jpeg') }}" class="item-box" rel="prettyPhoto[gallery1]"><!-- full image -->
@@ -298,10 +203,10 @@
                             <div class="portfolio-item-bg-black">
                                 <div class="item-info">
                                     <div class="headline">
-                                        <h4>MAXART DESIGN</h4>
+                                        <h4>DESIGN ABMS</h4>
                                         <hr>
                                     </div>
-                                    <p>Amazing Design by Multipurpose</p>
+                                    <p>Design impressionnant</p>
                                 </div>
                             </div>
                         </div>
@@ -323,10 +228,10 @@
                             <div class="portfolio-item-bg-black">
                                 <div class="item-info">
                                     <div class="headline">
-                                        <h4>MAXART DESIGN</h4>
+                                        <h4>DESIGN ABMS</h4>
                                         <hr>
                                     </div>
-                                    <p>Amazing Design by Multipurpose</p>
+                                    <p>Design impressionnant</p>
                                 </div>
                             </div>
                         </div>
@@ -347,10 +252,10 @@
                             <div class="portfolio-item-bg-black">
                                 <div class="item-info">
                                     <div class="headline">
-                                        <h4>MAXART DESIGN</h4>
+                                        <h4>DESIGN ABMS</h4>
                                         <hr>
                                     </div>
-                                    <p>Amazing Design by Multipurpose</p>
+                                    <p>Design impressionnant</p>
                                 </div>
                             </div>
                         </div>
@@ -371,40 +276,17 @@
                             <div class="portfolio-item-bg-black">
                                 <div class="item-info">
                                     <div class="headline">
-                                        <h4>MAXART DESIGN</h4>
+                                        <h4>DESIGN ABMS</h4>
                                         <hr>
                                     </div>
-                                    <p>Amazing Design by Multipurpose</p>
+                                    <p>Design impressionnant</p>
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
             </div>
-            <div class="col-lg-2 col-col-md-3 col-sm-3 col-xs-12 filter painting">
-                <div class="portfolio_6">
-                    <a href="{{ asset('build/images/gallery-thumb/deco5.jpeg') }}" class="item-box" rel="prettyPhoto[gallery1]"><!-- full image -->
-                        <img src="{{ asset('build/images/gallery-thumb/deco5.jpeg') }}" class="img-responsive" alt=""><!-- thumb image -->
 
-                        <div class="portfolio-bg"><!-- caption here -->
-                            <div class="portfolio-item">
-                                <div class="item-info">
-                                    <span class="plus">+</span>
-                                </div>
-                            </div>
-                            <div class="portfolio-item-bg-black">
-                                <div class="item-info">
-                                    <div class="headline">
-                                        <h4>MAXART DESIGN</h4>
-                                        <hr>
-                                    </div>
-                                    <p>Amazing Design by Multipurpose</p>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
 
         </div>
     </div>
